--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
     <body>
         <div class="parent">
             <div class="child">
-                У любого элемента высота задается по контенту.
+                У блочных элементов контент может превышать заданные размеры
+                content-area.
             </div>
             <div class="child">
-                У блочных элементов потомок занимает 100% ширины родительского
-                элемента.
-            </div>
-            <div class="child">
-                У блочных элементов можно задать размер контентной области -
-                изменить width или height.
+                Ширина элемента не уменьшится меньше значения min-width, даже
+                если значение width будет меньше.
             </div>
         </div>
         <span class="parent">
