--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
     <body>
         <div class="parent">
             <div class="child">
-                У блочных элементов контент может превышать заданные размеры
-                content-area.
-            </div>
-            <div class="child">
-                Ширина элемента не уменьшится меньше значения min-width, даже
-                если значение width будет меньше.
+                Ширина элемента не превысит значения max-width, даже если
+                значение width будет больше.
             </div>
         </div>
         <span class="parent">
