--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <div class="parent">
-            <div class="child"></div>
-          </div>
-          <div class="parent">
-            <div class="child">
-              У любого элемента высота задается по контенту. Если контента нет, то высота равна 0. Если контента больше, то значение min-height позволяет высоте увеличиваться.</div>
-          </div>
+        <div class="card">
+            <h4 clacc="card-title">Canvas</h4>
+            <p class="card-description">
+                В макете psd есть область, называемая canvas. Это область в
+                которой дизайнер может что-то рисовать, а вне этой области
+                программа рисовать не позволит. Ширина canvas - это не
+                конкретная ширина экрана, а максимальная. Т.е. реальный экран
+                может быть и больше или меньше - это не важно. В верстке это все
+                равно ширина body, которую мы не задем. Потому что ширину body
+                задает операционная система и браузер.
+            </p>
+        </div>
+        <div class="card">
+            <h4 clacc="card-title">Content box</h4>
+            <p class="card-description">
+                Для верстки важна максимальная ширина, внутри которой размещен
+                контент. Обычно эту ширину ограничивают направляющие.
+            </p>
+        </div>
     </body>
 </html>
