--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <div class="parent">
-            <div class="child"></div>
+            <div class="child">
+                <div class="inner">w100+h150</div>
+            </div>
         </div>
     </body>
 </html>
