--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     </head>
     <body>
         <div class="parent">
-            <div class="child">
-                <div class="inner">w100+h150</div>
-            </div>
+            <div class="child"></div>
+        </div>
+        <div class="parent">
+            <div class="child"></div>
         </div>
     </body>
 </html>
