--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <div class="parent">
-            <div class="child"></div>
-        </div>
-        <div class="parent">
-            <div class="child"></div>
+        <div class="container">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
+            <div class="box">7</div>
+            <div class="box">8</div>
+            <div class="box">9</div>
+            <div class="box">10</div>
+            <div class="box">11</div>
+            <div class="box">12</div>
         </div>
     </body>
 </html>
